Update index.html and styles.css with new info

--- a/task-a/index.html
+++ b/task-a/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+<!--
+  Author: Chinemerem Adilike
+  Date: 2025-09-21
+  Description: My styled web page for the BasicOfWebDev2025Tasks project
+-->
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
