Add Task A (html + css)

--- a/task-a/index.html
+++ b/task-a/index.html
@@ -3,25 +3,17 @@
   Date: 2025-09-21
   Description: My styled web page for the BasicOfWebDev2025Tasks project
 -->
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Styled Page</title>
-  <style>
-    p {
-      font-size: 18px;
-      color: gray;
-    }
-  </style>
-  <!-- Link to external CSS file -->
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello Web</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 style="color: darkblue;">Hello, I'm Chinemerem, Welcome to My Page</h1>
-  <p>Welcome to my classy web page! <br>
-      I love building beautiful and functional web experiences.<br>
-      Let's create something amazing together.</p>
-  <a href="#">Click me</a>
+  <h1>Hello Web</h1>
+  <p>This is my first webpage for Task A in Basics of Web Development 2025.</p>
+  <a href="https://www.example.com" target="_blank">Visit Example Website</a>
 </body>
 </html>
