--- a/task-f/index.html
+++ b/task-f/index.html
@@ -1,12 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weekly Timetable</title>
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script>
+  <script src="index.js" defer></script>
 </head>
-
 <body>
   <!--
     Author: Chinemerem Adilike
@@ -23,8 +23,8 @@
       <!-- Student info (30%) -->
       <section class="student-info" aria-label="Student information">
         <h2 class="student-info-title">Information</h2>
-        <p><span class="student-name">Your Name</span></p>
-        <p><span class="student-group">Group number</span></p>
+        <p><span class="student-name">Chinemerem Adilike</span></p>
+        <p><span class="student-group">AITS24P</span></p>
       </section>
 
       <!-- Controls (70%): add course + day marks -->
@@ -38,9 +38,12 @@
           </div>
 
           <fieldset class="days-group">
-            <legend>Days (yes = &#9989;, no = &#10060;)</legend>
+            <legend>Days (yes = ✅, no = ❌)</legend>
+            <label><input type="checkbox" name="day" value="Mon"> Mon</label>
             <label><input type="checkbox" name="day" value="Tue"> Tue</label>
+            <label><input type="checkbox" name="day" value="Wed"> Wed</label>
             <label><input type="checkbox" name="day" value="Thu"> Thu</label>
+            <label><input type="checkbox" name="day" value="Fri"> Fri</label>
           </fieldset>
 
           <div class="form-row">
@@ -57,16 +60,18 @@
         <thead>
           <tr>
             <th>Course</th>
+            <th>Mon</th>
             <th>Tue</th>
+            <th>Wed</th>
+            <th>Thu</th>
             <th>Fri</th>
           </tr>
         </thead>
         <tbody>
+          <!-- New rows will be added here by JavaScript -->
         </tbody>
       </table>
     </div>
   </main>
-
 </body>
-
 </html>
