--- a/task-i/index.html
+++ b/task-i/index.html
@@ -60,11 +60,12 @@
 
     <!-- Call to Action -->
     <section class="text-center">
-      <h2 class="text-xl font-semibold mb-2">Ready to hit the road?</h2>
-      <button class="px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
-        See Available Rentals 
-      </button>
-    </section>
+  <h2 class="text-xl font-semibold mb-2">Ready to hit the road?</h2>
+  <a href="catalog.html" 
+     class="px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
+    View Catalog
+  </a>
+</section>
   </main>
 
   <footer class="bg-blue-900 text-white py-6 text-center">
