--- a/task-i/index.html
+++ b/task-i/index.html
@@ -61,7 +61,7 @@
     <!-- Call to Action -->
     <section class="text-center">
   <h2 class="text-xl font-semibold mb-2">Ready to hit the road?</h2>
-  <a href="catalog.html" 
+  <a href="task-j/catalog.html" 
      class="px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
     View Catalog
   </a>
