--- a/task-i/task-j/catalog.html
+++ b/task-i/task-j/catalog.html
@@ -11,7 +11,7 @@
   <header class="bg-blue-900 text-white py-6 text-center">
     <h1 class="text-3xl font-bold">RentIt Car Rentals</h1>
     <nav class="mt-2">
-      <a href="task-i/index.html" class="underline">Home</a>
+      <a href="../task-i/index.html" class="underline">Home</a>
       <a href="catalog.html" class="underline ml-4">Catalog</a>
     </nav>
   </header>
