--- a/task-i/index.html
+++ b/task-i/index.html
@@ -65,6 +65,9 @@
      class="px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
     View Catalog
   </a>
+  <a href="../task-k/order.html" class="bg-blue-900 text-white px-6 py-3 rounded shadow hover:bg-blue-700">
+  Book Now
+</a>
 </section>
   </main>
 
