--- a/task-i/index.html
+++ b/task-i/index.html
@@ -61,13 +61,16 @@
     <!-- Call to Action -->
     <section class="text-center">
   <h2 class="text-xl font-semibold mb-2">Ready to hit the road?</h2>
-  <a href="task-j/catalog.html" 
+  <div class="flex justify-center space-x-4 mt-6">
+  <a href="task-j/catalog.html"
      class="px-6 py-3 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
     View Catalog
   </a>
-  <a href="../task-k/order.html" class="bg-blue-900 text-white px-6 py-3 rounded shadow hover:bg-blue-700">
-  Book Now
-</a>
+  <a href="../task-k/order.html"
+     class="px-6 py-3 bg-blue-900 text-white rounded shadow hover:bg-blue-700 transition">
+    Book Now
+  </a>
+</div>
 </section>
   </main>
 
