--- a/task-l/catalog.html
+++ b/task-l/catalog.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Catalog – RentIt Car Rentals</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -29,7 +30,7 @@
       <h2 class="text-2xl font-semibold mb-4">Available Vehicles</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
 
-        <!-- Example Vehicle -->
+        <!-- Economy Sedan -->
         <figure class="bg-white p-4 rounded shadow">
           <img src="example.jpg" alt="Economy Sedan parked on scenic road"
                class="w-full h-48 object-cover rounded mb-2" loading="lazy">
@@ -40,8 +41,61 @@
           </figcaption>
         </figure>
 
-        <!-- Add other vehicles here (SUV, Van, etc.) -->
-        <!-- Whitesuv, blackvanfamily, electriccar, coupe, cargovan -->
+        <!-- Spacious SUV -->
+        <figure class="bg-white p-4 rounded shadow">
+          <img src="whitesuv.jpg" alt="Spacious SUV on mountain road"
+               class="w-full h-48 object-cover rounded mb-2" loading="lazy">
+          <figcaption class="font-medium text-center">
+            Spacious SUV<br>
+            <span class="text-sm text-gray-600">Roomy and powerful, ideal for family adventures.</span><br>
+            <span class="text-blue-700 font-semibold">59 €/d, 299 €/wk</span>
+          </figcaption>
+        </figure>
+
+        <!-- Family Van -->
+        <figure class="bg-white p-4 rounded shadow">
+          <img src="blackvanfamily.jpg" alt="Family Van with scenic backdrop"
+               class="w-full h-48 object-cover rounded mb-2" loading="lazy">
+          <figcaption class="font-medium text-center">
+            Family Van<br>
+            <span class="text-sm text-gray-600">Spacious and comfortable, perfect for group travel.</span><br>
+            <span class="text-blue-700 font-semibold">69 €/d, 349 €/wk</span>
+          </figcaption>
+        </figure>
+
+        <!-- Electric Hatchback -->
+        <figure class="bg-white p-4 rounded shadow">
+          <img src="electriccar.jpg" alt="Electric hatchback near charging station"
+               class="w-full h-48 object-cover rounded mb-2" loading="lazy">
+          <figcaption class="font-medium text-center">
+            Electric Hatchback<br>
+            <span class="text-sm text-gray-600">Eco-friendly and agile, great for urban driving.</span><br>
+            <span class="text-blue-700 font-semibold">45 €/d, 229 €/wk</span>
+          </figcaption>
+        </figure>
+
+        <!-- Luxury Coupe -->
+        <figure class="bg-white p-4 rounded shadow">
+          <img src="coupe.png" alt="Luxury coupe on open highway"
+               class="w-full h-48 object-cover rounded mb-2" loading="lazy">
+          <figcaption class="font-medium text-center">
+            Luxury Coupe<br>
+            <span class="text-sm text-gray-600">Stylish and fast, designed for premium comfort.</span><br>
+            <span class="text-blue-700 font-semibold">89 €/d, 449 €/wk</span>
+          </figcaption>
+        </figure>
+
+        <!-- Cargo Van -->
+        <figure class="bg-white p-4 rounded shadow">
+          <img src="cargovan.jpg" alt="Cargo van parked near warehouse"
+               class="w-full h-48 object-cover rounded mb-2" loading="lazy">
+          <figcaption class="font-medium text-center">
+            Cargo Van<br>
+            <span class="text-sm text-gray-600">Reliable and spacious, ideal for deliveries and moves.</span><br>
+            <span class="text-blue-700 font-semibold">55 €/d, 279 €/wk</span>
+          </figcaption>
+        </figure>
+
       </div>
     </section>
 
