--- a/task-l/order.html
+++ b/task-l/order.html
@@ -28,7 +28,8 @@
 
     <!-- Order Form -->
     <section aria-labelledby="order-form">
-      <form action="thanks.html" method="post" class="bg-white p-6 rounded shadow space-y-6">
+      <!-- ✅ Changed method to GET -->
+      <form action="thanks.html" method="get" class="bg-white p-6 rounded shadow space-y-6">
         <!-- Customer Information -->
         <fieldset class="space-y-4">
           <legend class="text-xl font-semibold">Customer Information</legend>
